--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 asgiref==3.4.1
+cachetools==4.2.4
 certifi==2021.5.30
 charset-normalizer==2.0.4
+cssselect==1.1.0
+cssutils==2.3.0
 Django==3.2.7
 django-grappelli==2.15.1
 django-ninja==0.14.0
 django-summernote==0.8.11.6
 idna==3.2
+lxml==4.6.3
 mysqlclient==2.0.3
 Pillow==8.3.1
+premailer==3.10.0
 pydantic==1.8.2
 pytz==2021.1
 requests==2.26.0
 sqlparse==0.4.1
 typing-extensions==3.10.0.2
 urllib3==1.26.6
+yagmail==0.14.260
